# django_photo_gallery

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
photo_gallery/: .env.example  manage.py
photo_gallery/contact/: admin.py  models.py  tests.py  views.py
photo_gallery/contact/migrations/: 0001_initial.py
photo_gallery/nav/: admin.py  context_processors.py  models.py  tests.py
photo_gallery/nav/migrations/: 0001_initial.py  0002_alter_navlink_vertical_order.py  0003_navsection.py  0004_navlink_nav_section.py  0005_alter_navlink_options_alter_navsection_options.py
photo_gallery/photo_gallery/: asgi.py  context_processors.py  database_settings_example.py  email_settings_example.py  prod_settings.py  prod_urls.py  secrets_template.py  settings.py  site_name_migration_template.py  sitemap_config.py  tests.py  urls.py  wsgi.py
photo_gallery/photos/: admin.py  models.py  tests.py  views.py
photo_gallery/photos/migrations/: 0001_initial.py  0002_alter_photo_large_image.py  0003_alter_photo_large_image.py  0004_photo_title.py  0005_photo_slug.py  0006_alter_photo_slug.py  0007_alter_photo_slug.py  0008_alter_photo_slug.py  0009_photo_description.py  0010_photo_location.py  0011_country_photo_country.py  0012_alter_country_options.py  0013_alter_country_options.py  0014_photo_date_taken.py  0015_collection.py  0016_collection_description.py  0017_collection_slug.py  0018_collection_published.py  0019_alter_collection_options.py  0020_photo_collections.py  (+4 more)
photo_gallery/templates/: 404.html  base.html  gsc_verification  robots.txt
(+6 files in other folders)
