[project]
name = "django-photo-gallery"
version = "1.0"
description = "A photo gallery website built using Django."
readme = "README.md"
requires-python = ">=3.13.13,<3.14"
dependencies = [
    "crispy-bootstrap5==2026.3",
    "django==5.2.13",
    "django-crispy-forms==2.6",
    "django-imagekit==6.1.0",
]
